// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders Membershipplan should renders correctly 1`] = `
<ForwardRef(InternalForm)
  id="membershipPlanForm"
  layout="vertical"
>
  <FormItem
    className="membershipPlan_name"
    label="Membership Plan Name"
    name="name"
    rules={
      Array [
        Object {
          "message": "Membership Plan's Name is required!",
          "required": true,
        },
      ]
    }
  >
    <Input
      id="membershipPlan_name"
      name="name"
      onChange={[Function]}
      type="string"
      value="Standard"
    />
  </FormItem>
  <FormItem
    className="description"
    label="Description"
    name="description"
    rules={
      Array [
        Object {
          "message": "Description is required!",
          "required": true,
        },
      ]
    }
  >
    <Input
      id="description"
      name="description"
      onChange={[Function]}
      type="string"
      value="6 Month"
    />
  </FormItem>
  <FormItem
    className="price"
    label="Price"
    name="price"
    rules={
      Array [
        Object {
          "message": "Price is required",
          "required": true,
        },
      ]
    }
  >
    <Input
      id="price"
      name="price"
      onChange={[Function]}
      type="number"
    />
  </FormItem>
  <FormItem
    className="project_limit"
    label="Project Limit"
    name="project_limit"
    rules={
      Array [
        Object {
          "message": "Project Limit is required",
          "required": true,
        },
      ]
    }
  >
    <Input
      id="project_limit"
      name="project_limit"
      onChange={[Function]}
      type="number"
      value={8}
    />
  </FormItem>
  <FormItem
    className="user_limit"
    label="User Limit"
    name="user_limit"
    rules={
      Array [
        Object {
          "message": "User Limit is required",
          "required": true,
        },
      ]
    }
  >
    <Input
      id="user_limit"
      name="user_limit"
      onChange={[Function]}
      type="number"
      value={6}
    />
  </FormItem>
  <FormItem
    className="plan_duration"
    label="Plan Duration"
    name="plan_duration"
    rules={
      Array [
        Object {
          "message": "Plan Duration is required",
          "required": true,
        },
      ]
    }
  >
    <Select
      bordered={true}
      choiceTransitionName=""
      id="plan_duration"
      name="plan_duration"
      onChange={[Function]}
      placeholder="Select Your Plan"
      transitionName="slide-up"
      value="Six Months"
    >
      <Option
        key="0"
        value="Six Months"
      >
        Six Months
      </Option>
      <Option
        key="1"
        value="One Year"
      >
        One Year
      </Option>
      <Option
        key="2"
        value="Two Years"
      >
        Two Years
      </Option>
      <Option
        key="3"
        value="Three Years"
      >
        Three Years
      </Option>
    </Select>
  </FormItem>
</ForwardRef(InternalForm)>
`;

exports[`when page is rendering should render the form 1`] = `
<ForwardRef(InternalForm)
  id="membershipPlanForm"
  layout="vertical"
>
  <FormItem
    className="membershipPlan_name"
    label="Membership Plan Name"
    name="name"
    rules={
      Array [
        Object {
          "message": "Membership Plan's Name is required!",
          "required": true,
        },
      ]
    }
  >
    <Input
      id="membershipPlan_name"
      name="name"
      onChange={[Function]}
      type="text"
      value="Standard"
    />
  </FormItem>
  <FormItem
    className="description"
    label="Description"
    name="description"
    rules={
      Array [
        Object {
          "message": "Description is required!",
          "required": true,
        },
      ]
    }
  >
    <Input
      id="description"
      name="description"
      onChange={[Function]}
      type="text"
      value="6 Month"
    />
  </FormItem>
  <FormItem
    className="price"
    label="Price"
    name="price"
    rules={
      Array [
        Object {
          "message": "Price is required",
          "required": true,
        },
      ]
    }
  >
    <Input
      id="price"
      name="price"
      onChange={[Function]}
      type="number"
    />
  </FormItem>
  <FormItem
    className="project_limit"
    label="Project Limit"
    name="project_limit"
    rules={
      Array [
        Object {
          "message": "Project Limit is required",
          "required": true,
        },
      ]
    }
  >
    <Input
      id="project_limit"
      name="project_limit"
      onChange={[Function]}
      type="number"
      value={8}
    />
  </FormItem>
  <FormItem
    className="user_limit"
    label="User Limit"
    name="user_limit"
    rules={
      Array [
        Object {
          "message": "User Limit is required",
          "required": true,
        },
      ]
    }
  >
    <Input
      id="user_limit"
      name="user_limit"
      onChange={[Function]}
      type="number"
      value={6}
    />
  </FormItem>
  <FormItem
    className="plan_duration"
    label="Plan Duration"
    name="plan_duration"
    rules={
      Array [
        Object {
          "message": "Plan Duration is required",
          "required": true,
        },
      ]
    }
  >
    <Select
      bordered={true}
      choiceTransitionName=""
      id="plan_duration"
      name="plan_duration"
      onChange={[Function]}
      placeholder="Select Your Plan"
      transitionName="slide-up"
      value="Six Months"
    >
      <Option
        key="0"
        value="Six Months"
      >
        Six Months
      </Option>
      <Option
        key="1"
        value="One Year"
      >
        One Year
      </Option>
      <Option
        key="2"
        value="Two Years"
      >
        Two Years
      </Option>
      <Option
        key="3"
        value="Three Years"
      >
        Three Years
      </Option>
    </Select>
  </FormItem>
</ForwardRef(InternalForm)>
`;
